--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
         "php": "^7.0",
         "illuminate/contracts": "5.1.*|5.2.*|5.3.*|5.4.*|5.5.*|5.6.*",
         "illuminate/support": "5.1.*|5.2.*|5.3.*|5.4.*|5.5.*|5.6.*",
-        "graham-campbell/manager": "^3.0",
+        "graham-campbell/manager": "dev-master",
         "toin0u/digitalocean-v2": "^2.0"
     },
     "require-dev": {
